<resources>
    <string name="app_name">Stazy</string>
    <string name="default_notification_channel_id">CHANNEL_01</string>

    <!--Hotel End Definitions-->

    <!--Hotel Main Activity Texts-->
    <string name="activity_hotel_main_explore_text_view_text">Explore</string>
    <string name="activity_hotel_main_explore_card_view_musicians_text">Musicians</string>
    <string name="activity_hotel_main_explore_card_view_comedians_text">Comedians</string>
    <string name="activity_hotel_main_explore_card_view_others_text">Others</string>
    <string name="activity_hotel_main_prev_performances_text_view_text">Previous Performances</string>
    <string name="activity_hotel_main_prev_performances_child_view_header_musicians_text_view_text">Musicians</string>
    <string name="activity_hotel_main_prev_performances_child_view_header_comedians_text_view_text">Comedians</string>
    <string name="activity_hotel_main_prev_performances_child_view_headers_button_text">View All</string>

    <!--Perfomer Activity Texts-->
    <string name="activity_performer_shortlist_button_text">Shortlist</string>
    <string name="activity_performer_hire_button_text">Hire</string>
    <!--Dialog Texts-->
    <string name="ap_condtions_dialog_performance_time_text_view_text">Time of Performance</string>
    <string name="ap_conditions_dialog_duration_time_text_view_text">Duration of Performance</string>
    <!--Dialog_Spinner Texts-->
    <!--spinner_hours texts-->
    <string-array name="ap_conditions_dialog_duration_child_hours_spinner_entries">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <!--spinner_mins texts-->
    <string-array name="ap_conditions_dialog_duration_child_mins_spinner">
        <item>00</item>
        <item>15</item>
        <item>30</item>
        <item>45</item>
    </string-array>

    <!--ViewAllPerformers list item Texts-->
    <string name="vap_shortlist_image_view_desc">Shortlist</string>
    <string name="activity_hotel_main_prev_performances_child_view_header_others_text_view_text">Others</string>

    <!--HirePerformer Texts-->
    <string name="activity_hire_performer_spinner_type_text">Type</string>
    <string name="activity_hire_performer_spinner_genre_text">Genre</string>
    <string name="activity_hire_performer_spinner_sort_text">Sort</string>
    <!--spinner_type texts-->
    <string-array name="spinner_type_entries">
        <item>Musicians</item>
        <item>Comedians</item>
        <item>Others</item>
    </string-array>
    <!--spinner_genre texts-->
    <string-array name="spinner_genre_mucisians_entries">
        <item>Singer</item>
        <item>Guitarist</item>
        <item>DJ</item>
        <item>Band</item>
    </string-array>

    <string-array name="spinner_genre_comedians_entries">
        <item>Stand-Ups</item>
        <item>Shayari</item>
    </string-array>

    <string-array name="spinner_genre_others_entries">
        <item>Magician</item>
        <item>Motivational Speaker</item>
        <item>Others</item>
    </string-array>
    <!--spinner_sort texts-->
    <string-array name="spinner_sort_entries">
        <item>Alphabetically</item>
        <item>Popularity</item>
        <item>Rating</item>
        <item>Price</item>
    </string-array>

    <!--Performer End Definitions-->
    <!--activity_main_performer Texts-->
    <string name="activity_main_performer_current_hires_text_view_text">Your Hires</string>
    <string name="activity_main_performer_menu_item_terms_and_conditions_text">Terms and Conditions</string>
    <string name="activity_main_performer_menu_item_help_text">Help</string>
    <string name="activity_main_performer_menu_item_profile_text">My Account</string>
    <string name="activity_main_performer_menu_item_sign_out_text">Sign Out</string>
    <string name="activity_performer_profile_buy_credits_button_text">Buy Credits</string>

    <string name="PAYMENT_ID">9455687935@ybl</string>
    <string name="payment_dialog_informatory_text_view_text">Please input the amount of credits you want to buy.
    \n**Cost of 1 credit = Rs. 50\n**Please enter the message "STAZY CREDITS PAYMENT" while paying using PhonePe</string>
    <string name="payment_dialog_credits_text_view_text">Credits:</string>
    <string name="payment_dialog_input_credits_hint">CREDITS . . .</string>
    <string name="sign_in_activity_welcome_text_view_text">Welcome</string>
    <string name="sign_in_activity_phone_number_hint">Phone Number</string>
    <string name="sign_in_activity_password_hint">OTP . . .</string>
    <string name="sign_in_activity_log_in_button_introduction_text">Enter the world of joy with food. . .</string>
    <string name="sign_in_activity_log_in_button_text">SIGN IN</string>
    <string name="sign_in_activity_sign_up_button_text">OR SIGN UP</string>
    <string name="sign_in_activity_forgot_password_button_text">Forgot Password ?</string>
    <string name="sign_up_activity_hotel_button_text">An Event Organizer</string>
    <string name="sign_up_activity_performer_button_text">A Dedicated Performer</string>
    <string name="sign_up_activity_introduction_text_view_text">Let\'s get you started up. Please provide us with the following details to get you on-board quickly</string>
    <string name="sign_up_activity_name_input_hint">Name</string>
    <string name="sign_up_activity_phone_number_input_text">Phone Number</string>
    <string name="activity_sign_up_description_input_hint">A Short Description . . .</string>
    <string name="sign_up_activity_hotel_city_input_text">Nearest City</string>
    <string name="activity_sign_up_hotel_button_text">Sign Me Up</string>
    <string name="activity_sign_up_performer_facebook_link_input_hint">Facebook User Name</string>
    <string name="activity_sign_up_performer_instagram_link_input_hint">Instagram User Name</string>
    <string name="activity_sign_up_performer_type_layout_prompt">Your Genre</string>
    <string name="activity_sign_up_performer_genre_layout_prompt">Category</string>
    <string name="activity_sign_up_performer_price_input_hint">Your Initial Price (Hourly) . . .</string>
    <string name="sign_up_activity_initial_introduction_text_view_text">Hi, You are . . .</string>
    <string name="otp_fragment_text_view_text">Please enter the received OTP</string>
    <string name="otp_fragment_input_hint">OTP . . .</string>
    <string name="sign_in_activity_get_otp_button_text">GET OTP</string>


    <string-array name="available_cities_sign_up_spinner_entries">
        <item>Prayagraj</item>
        <item>New Delhi</item>
    </string-array>

    <string name="buy_priority_prompt">
        This feature lets you get a higher priority in search results of someone who is trying to hire a performer. It will cost you 0.5 credits of your account.
    \n\nPlease proceed if you want to promote yourself to a higher priority . . .
        \n\n** Please note that you need to have atleast 1.5 credits.
    </string>
    <string name="activity_hotel_main_shortlist_text_view_text">Shortlists</string>
    <string name="activity_hotel_main_hire_text_view_text">Hires</string>
    <string name="activity_performer_rate_and_pay_button_text">Rate and Pay</string>
    <string name="rate_and_pay_intro_text">Please fill out the rating form - Input 3 ratings for the customer (one from yourself and rest from customers).</string>
    <string name="activity_sign_up_performer_facebook_uid_input_hint">Facebook User ID</string>
    <string name="activity_hotel_main_accepted_text_view_text">Accepted Performers</string>


</resources>
