<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@id/payment_dialog_informatory_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/payment_dialog_informatory_text_view_start_margin"
        android:layout_marginTop="@dimen/payment_dialog_informatory_text_view_top_margin"
        android:layout_marginEnd="@dimen/payment_dialog_informatory_text_view_end_margin"
        android:text="@string/payment_dialog_informatory_text_view_text"
        android:textColor="@color/colorPrimaryText"
        android:textSize="@dimen/text_size_normal"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/payment_dialog_informatory_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/payment_dialog_credits_buy_container_top_margin"
        android:layout_marginStart="@dimen/payment_dialog_credits_buy_container_start_margin"
        android:layout_marginEnd="@dimen/payment_dialog_credits_buy_container_end_margin">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/payment_dialog_credits_text_view_text"
            android:textStyle="bold"
            android:textSize="@dimen/text_size_normal"
            android:layout_gravity="center_vertical"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical">

            <android.support.design.widget.TextInputEditText
                android:id="@id/payment_dialog_input_credits"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/payment_dialog_input_credits_hint"
                android:inputType="numberDecimal"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>