<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@id/activity_sign_in_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authflow.SignInActivity">

    <ProgressBar
        android:id="@id/sign_in_progress"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:indeterminate="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"/>

    <TextView
        android:id="@id/sign_in_activity_welcome_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size_extra_large"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="@dimen/sign_in_activity_welcome_text_view_vertical_bias"
        android:text="@string/sign_in_activity_welcome_text_view_text" />

    <!--TODO: Set a different TypeFace for this Welcome Text-->

    <LinearLayout
        android:id="@id/sign_in_activity_credential_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sign_in_activity_credential_container_top_margin"
        android:orientation="vertical"
        android:paddingBottom="@dimen/sign_in_activity_credential_container_vertical_padding"
        android:paddingEnd="@dimen/sign_in_activity_credential_container_horizontal_padding"
        android:paddingStart="@dimen/sign_in_activity_credential_container_horizontal_padding"
        android:paddingTop="@dimen/sign_in_activity_credential_container_vertical_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_in_activity_welcome_text_view">

        <!--TODO: Change the TypeFace of hint texts to some thin lined texts-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="5">
                <android.support.design.widget.TextInputEditText
                    android:id="@id/activity_sign_in_phone_prefix"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:focusable="false"
                    android:text="+91"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <android.support.design.widget.TextInputEditText
                    android:id="@id/sign_in_activity_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/sign_in_activity_phone_number_hint"
                    android:inputType="number" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/sign_in_activity_credential_container_item_two_top_margin"
            android:layout_weight="1"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@id/sign_in_activity_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/sign_in_activity_password_hint"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <TextView
        android:id="@id/sign_in_activity_log_in_button_introduction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/sign_in_activity_log_in_button_introduction_end_margin"
        android:layout_marginStart="@dimen/sign_in_activity_log_in_button_introduction_start_margin"
        android:layout_marginTop="@dimen/sign_in_activity_log_in_button_introduction_top_margin"
        android:gravity="center_horizontal"
        android:text="@string/sign_in_activity_log_in_button_introduction_text"
        android:textColor="@color/colorSecondaryText"
        android:textSize="@dimen/text_size_normal"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_in_activity_credential_container" />

    <android.support.v7.widget.CardView
        android:id="@id/sign_in_activity_get_otp_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sign_in_activity_log_in_button_top_margin"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="@dimen/sign_in_activity_log_in_button_corner_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_in_activity_log_in_button_introduction">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="@dimen/sign_in_activity_log_in_button_bottom_padding"
            android:paddingEnd="@dimen/sign_in_activity_log_in_button_end_padding"
            android:paddingStart="@dimen/sign_in_activity_log_in_button_start_padding"
            android:paddingTop="@dimen/sign_in_activity_log_in_button_top_padding"
            android:text="@string/sign_in_activity_get_otp_button_text"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_normal"
            android:textStyle="bold" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@id/sign_in_activity_log_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sign_in_activity_log_in_button_top_margin"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="@dimen/sign_in_activity_log_in_button_corner_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_in_activity_log_in_button_introduction"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="@dimen/sign_in_activity_log_in_button_bottom_padding"
            android:paddingEnd="@dimen/sign_in_activity_log_in_button_end_padding"
            android:paddingStart="@dimen/sign_in_activity_log_in_button_start_padding"
            android:paddingTop="@dimen/sign_in_activity_log_in_button_top_padding"
            android:text="@string/sign_in_activity_log_in_button_text"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_normal"
            android:textStyle="bold" />
    </android.support.v7.widget.CardView>

    <android.support.constraint.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="sign_in_activity_get_otp_button,sign_in_activity_log_in_button"/>

    <TextView
        android:id="@id/sign_in_activity_sign_up_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sign_in_activity_sign_up_button_top_margin"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/sign_in_activity_sign_up_button_text"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/text_size_normal"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier" />

    <View
        android:id="@id/sign_in_activity_divider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/sign_in_activity_divider_height"
        android:layout_marginEnd="@dimen/sign_in_activity_divider_horizontal_margin"
        android:layout_marginStart="@dimen/sign_in_activity_divider_horizontal_margin"
        android:layout_marginTop="@dimen/sign_in_activity_divider_top_margin"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_in_activity_sign_up_button" />

</android.support.constraint.ConstraintLayout>

