<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".performerend.MainActivityPerformer">

    <android.support.v7.widget.CardView
        android:id="@id/activity_main_performer_hires_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardElevation="@dimen/activity_main_performer_hires_card_view_elevation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="@dimen/activity_main_performer_hires_card_view_bottom_padding"
            android:paddingTop="@dimen/activity_main_performer_hires_card_view_top_padding"
            android:text="@string/activity_main_performer_current_hires_text_view_text"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold" />
    </android.support.v7.widget.CardView>

    <ListView
        android:id="@id/activity_main_performer_list_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_main_performer_bottom_margin"
        android:layout_marginTop="@dimen/activity_main_performer_list_view_top_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_main_performer_hires_card_view"
        android:divider="@drawable/list_view_divider"
        android:dividerHeight="@dimen/activity_view_all_performers_list_view_divider_height"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@id/activity_main_performer_hires_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_main_performer_hires_fab_bottom_margin"
        android:layout_marginEnd="@dimen/activity_main_performer_hires_fab_end_margin"
        android:elevation="@dimen/activity_main_performer_fab_elevation"
        android:src="@drawable/ic_fab_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <android.support.v7.widget.CardView
        android:id="@id/activity_main_performer_menu_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="@dimen/activity_main_performer_menu_container_corner_radius"
        app:cardElevation="@dimen/activity_main_performer_menu_container_elevation"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@id/activity_main_performer_menu_item_terms_and_conditions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                android:paddingBottom="@dimen/activity_performer_menu_divider_top_margin"
                android:paddingStart="@dimen/activity_main_performer_menu_item_start_padding"
                android:paddingTop="@dimen/activity_main_performer_menu_container_top_padding"
                android:text="@string/activity_main_performer_menu_item_terms_and_conditions_text"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/text_size_small"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@id/activity_performer_menu_divider_one"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/activity_main_performer_menu_item_terms_and_conditions" />

            <TextView
                android:id="@id/activity_main_performer_menu_item_help"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                android:paddingBottom="@dimen/activity_performer_menu_divider_top_margin"
                android:paddingStart="@dimen/activity_main_performer_menu_item_start_padding"
                android:paddingTop="@dimen/activity_main_performer_menu_item_help_top_margin"
                android:text="@string/activity_main_performer_menu_item_help_text"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/text_size_small"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/activity_performer_menu_divider_one" />

            <View
                android:id="@id/activity_performer_menu_divider_two"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/activity_main_performer_menu_item_help" />

            <TextView
                android:id="@id/activity_main_performer_menu_item_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:onClick="openMyAccount"
                android:foreground="?attr/selectableItemBackground"
                android:paddingBottom="@dimen/activity_performer_menu_divider_top_margin"
                android:paddingStart="@dimen/activity_main_performer_menu_item_start_padding"
                android:paddingTop="@dimen/activity_main_performer_menu_item_profile_top_margin"
                android:text="@string/activity_main_performer_menu_item_profile_text"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/text_size_small"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/activity_performer_menu_divider_two" />

            <View
                android:id="@id/activity_performer_menu_divider_three"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/activity_main_performer_menu_item_profile" />

            <TextView
                android:id="@id/activity_main_performer_menu_item_sign_out"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:layout_marginBottom="@dimen/activity_main_performer_menu_container_bottom_padding"
                android:foreground="?attr/selectableItemBackground"
                android:paddingBottom="@dimen/activity_performer_menu_divider_top_margin"
                android:paddingStart="@dimen/activity_main_performer_menu_item_start_padding"
                android:paddingTop="@dimen/activity_main_performer_menu_item_sign_out_top_margin"
                android:text="@string/activity_main_performer_menu_item_sign_out_text"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/text_size_small"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/activity_performer_menu_divider_three" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>